--- a/style.css
+++ b/style.css
@@ -1,57 +1,92 @@
-:root {
---red: #A82C3A;
---orange: #FF5722;
---yellow: #FFC300;
---green: #B2E835;
---blue: #00CED1;
---indigo: #4B0082;
---violet: #1B1721;
+html {
+  background:#833ab4; 
+  background: linear-gradient(to bottom, #65FAFF, #FBB3CF);
 }
 
-body {
+body,
+html {
   display: grid;
-  margin: 0;
-  padding: 0;
+  place-content: center;
+  height: 100%;
+  font-family: helvetica neue, helvetica, sans-serif;
+}
+
+.watereffect {
+  isolation: isolate; 
+  mix-blend-mode: multiply;
+  position: relative;
+}
+
+.watereffect::before {
+  content: "";
+  display: block;
+  top: 0;
+  height: 100%;
   width: 100%;
-  height: 100vh;
+  position: absolute;
+  background-image: url(https://media0.giphy.com/media/3oEdvaxmd15YTHy6Uo/giphy.gif?cid=ecf05e47azzm1vgxel8zf4vjfphwcu5m9h4lfy1p27sko8uc&ep=v1_gifs_related&rid=giphy.gif&ct=g);
+  filter: saturate(0);
+  background-size: cover;
+  background-position: center;
+  background-repeat: none;
+  animation: darken 9s 4s;
+  opacity: 1;
+  animation-fill-mode: forwards;
+}
+
+
+.watereffect > * {
+  font-size: clamp(40px, 5vw, 201px);
+  position: relative;
+  padding: 20px;
+  margin: -20px;
+  mix-blend-mode: screen;
+  background-color: white;
+  color: #0BD3D3;
   overflow: hidden;
-  text-align: center;
-  align-content: center;
-  font-family: sans-serif;
-  background: #aaa;
+  animation: blur 7s;
 }
 
-h1 {
-  font-size: 15vw;
-  color: white;
-  -webkit-text-stroke: 0.015em black;
-  text-shadow: 0.05em 0.05em var(--red), 0.1em 0.1em var(--orange), 0.15em 0.15em var(--yellow), 0.2em 0.2em var(--green), 0.25em 0.25em var(--blue), 0.3em 0.3em var(--indigo), 0.35em 0.35em var(--violet);
-  animation: text-shadow-cascade 1s infinite steps(1);
+.watereffect > *::after {
+  content: "";
+  display: block;
+  top: 0;
+  height: 100%;
+  width: 200%;
+  position: absolute;
+  background-image: linear-gradient(315deg, #000000 0%, #ffffff 50%);
+  mix-blend-mode: screen;
+  animation: move 10s;
+  animation-fill-mode: forwards;
 }
 
-@keyframes text-shadow-cascade {
-  0% {
-    text-shadow: 0.05em 0.05em var(--red), 0.1em 0.1em var(--orange), 0.15em 0.15em var(--yellow), 0.2em 0.2em var(--green), 0.25em 0.25em var(--blue), 0.3em 0.3em var(--indigo), 0.35em 0.35em var(--violet);
+@keyframes move {
+  from {
+    transform: translateX(0);
+
   }
-  14.29% {
-    text-shadow: 0.05em 0.05em var(--violet), 0.1em 0.1em var(--red), 0.15em 0.15em var(--orange), 0.2em 0.2em var(--yellow), 0.25em 0.25em var(--green), 0.3em 0.3em var(--blue), 0.35em 0.35em var(--indigo);
+  
+  to {
+    transform: translateX(-100%)
   }
-  28.57% {
-    text-shadow: 0.05em 0.05em var(--indigo), 0.1em 0.1em var(--violet), 0.15em 0.15em var(--red), 0.2em 0.2em var(--orange), 0.25em 0.25em var(--yellow), 0.3em 0.3em var(--green), 0.35em 0.35em var(--blue);
+}
+
+@keyframes darken {
+  from {
+    opacity: 1
   }
-  42.86% {
-    text-shadow: 0.05em 0.05em var(--blue), 0.1em 0.1em var(--indigo), 0.15em 0.15em var(--violet), 0.2em 0.2em var(--red), 0.25em 0.25em var(--orange), 0.3em 0.3em var(--yellow), 0.35em 0.35em var(--green);
+  
+  to {
+    opacity: 0;
   }
-  57.14% {
-    text-shadow: 0.05em 0.05em var(--green), 0.1em 0.1em var(--blue), 0.15em 0.15em var(--indigo), 0.2em 0.2em var(--violet), 0.25em 0.25em var(--red), 0.3em 0.3em var(--orange), 0.35em 0.35em var(--yellow);
+}
+
+@keyframes blur {
+  from {
+    filter: blur(10px);
   }
-  71.43% {
-    text-shadow: 0.05em 0.05em var(--yellow), 0.1em 0.1em var(--green), 0.15em 0.15em var(--blue), 0.2em 0.2em var(--indigo), 0.25em 0.25em var(--violet), 0.3em 0.3em var(--red), 0.35em 0.35em var(--orange);
-  }
-  85.71% {
-    text-shadow: 0.05em 0.05em var(--orange), 0.1em 0.1em var(--yellow), 0.15em 0.15em var(--green), 0.2em 0.2em var(--blue), 0.25em 0.25em var(--indigo), 0.3em 0.3em var(--violet), 0.35em 0.35em var(--red);
-  }
-  100% {
-    text-shadow: 0.05em 0.05em var(--red), 0.1em 0.1em var(--orange), 0.15em 0.15em var(--yellow), 0.2em 0.2em var(--green), 0.25em 0.25em var(--blue), 0.3em 0.3em var(--indigo), 0.35em 0.35em var(--violet);
+  
+  to {
+    filter: blur(0px);
   }
 }
